# The-theory-of-parallelism

./: .gitignore  README.md
task1/: CMakeLists.txt  README.md
task1/src/: main.cpp
task2/: CMakeLists.txt  README.md  Untitled 1.ods  Untitled 1.odt  dgemv.cpp  integral.cpp  integral_results.txt  results.ods  system_results.txt
task2/src/: dgemv.cpp  integral.cpp  system_of_equations.cpp  test  test.cpp
task3/: CMakeLists.txt  README.md  dgemv
task3/src/: app.cpp  dgemv.cpp
task4/: README.md  task4.py
task5/: README.md  requirements.txt  task5.py
task6/: CMakeLists.txt  README.md  main.cpp  report.odg
